@@ -1,0 +1,3 @@
+# Enable GEdit as the default editor
+
+export VISUAL=/usr/bin/gedit
