@@ -147,3 +147,5 @@
 2017-02-13 Fred Gleason <fredg@paravelsystems.com>
 	* Added 'pygtk2', 'cups', 'gedit' and 'system-config-printer' to
 	the set of installed packages in 'centos7/install_rivendell.sh'.
+2017-02-14 Fred Gleason <fredg@paravelsystems.com>
+	* Added 'centos7/visual.sh'.
